CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(custom-memory-allocator VERSION 1.0.0 LANGUAGES C CXX)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET(INC_DIR ${CMAKE_SOURCE_DIR}/include)
SET(LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
SET(BIN_DIR ${CMAKE_BINARY_DIR}/build)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Debug)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Release)

FILE(GLOB TARGET_DIRS ${SRC_DIR}/*)
FOREACH(TARGET_DIR ${TARGET_DIRS})
  IF(IS_DIRECTORY ${TARGET_DIR})
    ADD_SUBDIRECTORY(${TARGET_DIR})
  ENDIF()
ENDFOREACH()
